Vertex slide crash sometimes. #32518

Closed
opened 2012-09-09 08:59:06 +02:00 by Massimiliano Puliero · 7 comments

%%%hi devs

svn 50481 for win7 64.

Vertex slide crash if during the slide operation I push 'muose middle button' and after that I confirm the operation. Seems appen only on mesh much more complex than a plane.

thnakyou.

max%%%

%%%hi devs svn 50481 for win7 64. Vertex slide crash if during the slide operation I push 'muose middle button' and after that I confirm the operation. Seems appen only on mesh much more complex than a plane. thnakyou. max%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%I had some crash with Vertex Slide too. I'm not sure about conditions but you may check Local View and Camera View. My revision now is 50457.%%%

%%%I had some crash with Vertex Slide too. I'm not sure about conditions but you may check Local View and Camera View. My revision now is 50457.%%%
Member

%%%Vertex slide crashes when the vertex snaps to another one using CTRL or ALT key.

Attached a backtrace (blender_vertex_slide_crash.txt).

r50485
Ubuntu 12.04 and64
%%%

%%%Vertex slide crashes when the vertex snaps to another one using CTRL or ALT key. Attached a backtrace (blender_vertex_slide_crash.txt). r50485 Ubuntu 12.04 and64 %%%

%%%good find. looks like it may have crashed other parts of blender too.
fixed r50493.%%%

%%%good find. looks like it may have crashed other parts of blender too. fixed r50493.%%%

%%%@antony-2, why did you close this with no message?
this isnt fixed.

Looked into this further.

The bug is caused by 2+ events in the events system triggering an edge slide macro twice in a row BEFORE wm_event_do_notifiers() is called.
%%%

%%%@antony-2, why did you close this with no message? this isnt fixed. Looked into this further. The bug is caused by 2+ events in the events system triggering an edge slide macro twice in a row BEFORE wm_event_do_notifiers() is called. %%%

%%%ack, ignore comment above, was mixed up with another report.%%%

%%%ack, ignore comment above, was mixed up with another report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32518
No description provided.